# qris-rsync-manager

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.ps1
app/: __init__.py  main.py
app/core/: __init__.py  askpass.py  file_scan.py  logging_utils.py  paths.py  profiles.py  progress.py  remote_dirs.py  rsync_command.py  rsync_runner.py  ssh_test.py  sync_compare.py
app/gui/: __init__.py  main_window.py  profile_dialog.py  remote_browser_dialog.py
packaging/: build_pyinstaller.ps1
tests/: test_askpass.py  test_file_scan.py  test_profiles.py  test_progress.py  test_remote_dirs.py  test_rsync_command.py  test_ssh_test.py  test_sync_compare.py
